[tool.poetry]
name = "agrichain"
version = "0.1.0"
description = ""
authors = ["Manish <manish.sharma2464@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "agrichain.main:main"

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
